--- a/index.html
+++ b/index.html
@@ -3,70 +3,130 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="GitHub Page for showcasing projects and skills">
-  <title>My GitHub Profile</title>
+  <meta name="description" content="Gimkit-inspired GitHub page design">
+  <title>Gimkit-Inspired Page</title>
   <style>
     body {
-      font-family: 'Raleway', sans-serif;
-      background: linear-gradient(135deg, #ffe226 0%, #bf2850 100%);
-      color: #333;
       margin: 0;
-      padding: 0;
+      font-family: 'Raleway', sans-serif;
+      background-color: #f8f8f8;
+      color: #333;
     }
 
     header {
-      background-color: #5a097a;
-      color: white;
+      background-color: #0f4c81;
       padding: 20px 0;
+      color: white;
       text-align: center;
     }
 
-    .container {
-      width: 80%;
-      margin: 0 auto;
-      padding: 20px;
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
     }
 
-    h1 {
+    nav {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 1rem;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #ffe226;
+    }
+
+    .hero {
+      background-color: #1d7eac;
+      color: white;
+      padding: 80px 20px;
+      text-align: center;
+    }
+
+    .hero h2 {
+      font-size: 2.2rem;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+
+    .hero button {
+      background-color: #ffe226;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .hero button:hover {
+      background-color: #bf2850;
       color: white;
     }
 
-    section {
-      margin-bottom: 40px;
-    }
-
-    .skills, .projects {
+    .features {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-    }
-
-    .card {
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-      margin: 15px;
-      width: 30%;
+      justify-content: space-around;
+      padding: 40px 20px;
       text-align: center;
-      transition: transform 0.2s;
+      background-color: white;
     }
 
-    .card:hover {
-      transform: scale(1.05);
+    .feature {
+      width: 30%;
     }
 
-    .card img {
-      border-radius: 50%;
-      width: 100px;
-      height: 100px;
+    .feature h3 {
+      font-size: 1.6rem;
+      margin-bottom: 15px;
+    }
+
+    .feature p {
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+
+    .cta {
+      background-color: #0f4c81;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .cta h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    .cta button {
+      background-color: #ffe226;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .cta button:hover {
+      background-color: #bf2850;
+      color: white;
     }
 
     footer {
       background-color: #333;
       color: white;
       text-align: center;
-      padding: 10px 0;
+      padding: 20px;
     }
 
     footer a {
@@ -74,9 +134,19 @@
       text-decoration: none;
     }
 
-    @media screen and (max-width: 768px) {
-      .card {
+    footer a:hover {
+      color: #bf2850;
+    }
+
+    @media (max-width: 768px) {
+      .features {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .feature {
         width: 100%;
+        margin-bottom: 20px;
       }
     }
   </style>
@@ -84,59 +154,43 @@
 <body>
 
   <header>
-    <h1>Welcome to My GitHub Page</h1>
+    <h1>Gimkit-Inspired Page</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Features</a>
+      <a href="#">Contact</a>
+      <a href="#">Sign Up</a>
+    </nav>
   </header>
 
-  <div class="container">
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Hello! I'm a passionate developer with a love for creating meaningful projects and contributing to open-source communities.</p>
-    </section>
+  <section class="hero">
+    <h2>Welcome to the Future of Learning</h2>
+    <p>Engage your students with fun, interactive quizzes and learning tools.</p>
+    <button>Get Started</button>
+  </section>
 
-    <section id="skills">
-      <h2>Skills</h2>
-      <div class="skills">
-        <div class="card">
-          <img src="https://via.placeholder.com/100" alt="HTML5">
-          <h3>HTML5</h3>
-        </div>
-        <div class="card">
-          <img src="https://via.placeholder.com/100" alt="CSS3">
-          <h3>CSS3</h3>
-        </div>
-        <div class="card">
-          <img src="https://via.placeholder.com/100" alt="JavaScript">
-          <h3>JavaScript</h3>
-        </div>
-      </div>
-    </section>
+  <section class="features">
+    <div class="feature">
+      <h3>Interactive Learning</h3>
+      <p>Create engaging quizzes and games to boost student participation and learning.</p>
+    </div>
+    <div class="feature">
+      <h3>Data-Driven Insights</h3>
+      <p>Track student performance and progress through detailed analytics and reports.</p>
+    </div>
+    <div class="feature">
+      <h3>Fun for Everyone</h3>
+      <p>Make learning enjoyable with games that keep students motivated and excited.</p>
+    </div>
+  </section>
 
-    <section id="projects">
-      <h2>Projects</h2>
-      <div class="projects">
-        <div class="card">
-          <h3>Project One</h3>
-          <p>A cool project that solves problem X using technology Y.</p>
-        </div>
-        <div class="card">
-          <h3>Project Two</h3>
-          <p>An innovative app that makes task Z much easier.</p>
-        </div>
-        <div class="card">
-          <h3>Project Three</h3>
-          <p>A tool that helps users achieve a specific goal efficiently.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <p>Feel free to reach out via <a href="mailto:your.email@example.com">email</a> or connect with me on <a href="https://github.com/your-profile">GitHub</a>.</p>
-    </section>
-  </div>
+  <section class="cta">
+    <h2>Ready to Get Started?</h2>
+    <button>Sign Up Now</button>
+  </section>
 
   <footer>
-    <p>&copy; 2024 My GitHub Profile | <a href="https://github.com/your-profile">GitHub</a></p>
+    <p>&copy; 2024 Gimkit-Inspired Design | <a href="https://github.com/your-profile">GitHub Profile</a></p>
   </footer>
 
 </body>
